--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@ layout: compress
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 {% include head.html %}
  <!-- Global site tag (gtag.js) - Google Analytics -->
  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EP7KLCYVP"></script>
